# django-turbo

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json  docker-compose.yaml
docker/: docker.env
sources/: Dockerfile  Makefile
sources/backend/: Makefile  README.md  pyproject.toml  schema.yaml
sources/backend/app/: schema.yaml
sources/backend/app/apiv1/: serializers.py  urls.py  views.py
sources/backend/app/apiv1/views/: __init__.py  apitest_view.py  books_view.py  users_view.py
sources/backend/app/config/: settings.py  urls.py
sources/backend/app/shop/: models.py
sources/backend/app/shop/migrations/: 0001_initial.py  0002_user_auth.py
sources/backend/app/templates/: index.html
sources/backend/app/utils/: decorators.py
sources/frontend/: Makefile  README.md  package.json  pnpm-lock.yaml  turbo.json
sources/frontend/apps/client/: package.json  vite.config.ts
sources/frontend/apps/client/src/: App.tsx
